--- a/fuzzy-sdg11/sd-report.ipynb
+++ b/fuzzy-sdg11/sd-report.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data sources and info\n",
+    "\n",
+    "https://dashboards.sdgindex.org/explorer\n",
+    "\n",
+    "download data: https://dashboards.sdgindex.org/static/downloads/files/SDR-2022-database.xlsx"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -569,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -618,26 +629,26 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>NER</td>\n",
-       "      <td>Niger</td>\n",
-       "      <td>51.335754</td>\n",
-       "      <td>61.1</td>\n",
-       "      <td>106.121</td>\n",
-       "      <td>93.619</td>\n",
-       "      <td>67.0</td>\n",
+       "      <th>25</th>\n",
+       "      <td>BRN</td>\n",
+       "      <td>Brunei Darussalam</td>\n",
+       "      <td>71.052925</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>32.111</td>\n",
+       "      <td>5.102</td>\n",
+       "      <td>99.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>red</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>green</td>\n",
        "      <td>2020.0</td>\n",
-       "      <td>93.204</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>74.675</td>\n",
-       "      <td>yellow</td>\n",
+       "      <td>99.574</td>\n",
+       "      <td>green</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -647,53 +658,53 @@
        "</div>"
       ],
       "text/plain": [
-       "    Country Code ISO3 Country  Goal 11 Regional Score  \\\n",
-       "125               NER   Niger               51.335754   \n",
+       "   Country Code ISO3            Country  Goal 11 Regional Score  \\\n",
+       "25               BRN  Brunei Darussalam               71.052925   \n",
        "\n",
-       "     Proportion of urban population living in slums (%)  \\\n",
-       "125                                               61.1    \n",
+       "    Proportion of urban population living in slums (%)  \\\n",
+       "25                                                NaN    \n",
        "\n",
-       "     Annual mean concentration of particulate matter of less than 2.5 microns in diam  \\\n",
-       "125                                            106.121                                  \n",
+       "    Annual mean concentration of particulate matter of less than 2.5 microns in diam  \\\n",
+       "25                                              5.102                                  \n",
        "\n",
-       "     Access to improved water source, piped (% of urban population)  \\\n",
-       "125                                             93.619                \n",
+       "    Access to improved water source, piped (% of urban population)  \\\n",
+       "25                                               99.6                \n",
        "\n",
-       "     Satisfaction with public transport (%)  \\\n",
-       "125                                    67.0   \n",
+       "    Satisfaction with public transport (%)  \\\n",
+       "25                                     NaN   \n",
        "\n",
-       "     Population with rent overburden (%)  Year: sdg11_slums  \\\n",
-       "125                                  NaN             2018.0   \n",
+       "    Population with rent overburden (%)  Year: sdg11_slums  \\\n",
+       "25                                  NaN                NaN   \n",
        "\n",
-       "     Normalized Score: sdg11_slums  ... Normalized Score: sdg11_pm25  \\\n",
-       "125                         32.111  ...                          0.0   \n",
+       "    Normalized Score: sdg11_slums  ... Normalized Score: sdg11_pm25  \\\n",
+       "25                            NaN  ...                        100.0   \n",
        "\n",
-       "     Dashboard Color: sdg11_pm25  Year: sdg11_pipedwat  \\\n",
-       "125                          red                2020.0   \n",
+       "    Dashboard Color: sdg11_pm25  Year: sdg11_pipedwat  \\\n",
+       "25                        green                2020.0   \n",
        "\n",
-       "    Normalized Score: sdg11_pipedwat  Dashboard Color: sdg11_pipedwat  \\\n",
-       "125                           93.204                           yellow   \n",
+       "   Normalized Score: sdg11_pipedwat  Dashboard Color: sdg11_pipedwat  \\\n",
+       "25                           99.574                            green   \n",
        "\n",
-       "     Year: sdg11_transport Normalized Score: sdg11_transport  \\\n",
-       "125                 2019.0                            74.675   \n",
+       "    Year: sdg11_transport Normalized Score: sdg11_transport  \\\n",
+       "25                    NaN                               NaN   \n",
        "\n",
-       "     Dashboard Color: sdg11_transport  Year: sdg11_rentover  \\\n",
-       "125                            yellow                   NaN   \n",
+       "    Dashboard Color: sdg11_transport  Year: sdg11_rentover  \\\n",
+       "25                               NaN                   NaN   \n",
        "\n",
-       "    Dashboard Color: sdg11_rentover  \n",
-       "125                             NaN  \n",
+       "   Dashboard Color: sdg11_rentover  \n",
+       "25                             NaN  \n",
        "\n",
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# print country with max value on 'Annual mean concentration of particulate matter of less than 2.5 microns in diam'\n",
-    "sdr[sdr['Annual mean concentration of particulate matter of less than 2.5 microns in diam'] == sdr['Annual mean concentration of particulate matter of less than 2.5 microns in diam'].max()]"
+    "sdr[sdr['Annual mean concentration of particulate matter of less than 2.5 microns in diam'] == sdr['Annual mean concentration of particulate matter of less than 2.5 microns in diam'].min()]"
    ]
   },
   {
